added link to linked-in , github, added email and phone

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
 </head>
 
@@ -31,6 +32,12 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="https://www.linkedin.com/in/navdeep-puri" target="_blank" class="fa fa-linkedin"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="https://github.com/NavdeepDP" target="_blank" class="fa fa-github fa-5x"></a>
+                    </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="./contact.html">Contact <span class="sr-only">(current)</span></a>
                     </li>
