--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
 </head>
 
@@ -31,6 +32,12 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="https://www.linkedin.com/in/navdeep-puri" target="_blank" class="fa fa-linkedin"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="https://github.com/NavdeepDP" target="_blank" class="fa fa-github fa-5x"></a>
+                    </li>
                     <li class="nav-item ">
                         <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
@@ -49,22 +56,25 @@
 
     <!-- Main content -->
     <main>
-        <div class="container" >
+        <div class="container">
             <div class="row">
                 <div class="col-lg-9 portfolio-col">
                     <h1 id="portfolio-header">Portfolio</h1>
-                    <hr />     
-                    <div class="row"> 
-                        <div class="col-sm-6"> <img class="img-responsive   image-p" src="./assets/images/pic-1.jpg" alt="Portfolio Image"></div>
-                        <div class="col-sm-6"> <img class="img-responsive   image-p" src="./assets/images/pic-2.jpg" alt="Portfolio Image"></div>
-                    </div>    
-                    <div class="row"> 
-                        <div class="col-sm-6"> <img class="img-responsive image-p" src="./assets/images/pic-3.jpg" alt="Portfolio Image"></div>
-                        <div class="col-sm-6"> <img class="img-responsive image-p" src="./assets/images/pic-4.jpg" alt="Portfolio Image"></div>
-                    </div>     
-                    <div class="row"> 
-                        <div class="col-sm-6"> <img class="img-responsive image-p" src="./assets/images/pic-5.jpg" alt="Portfolio Image"></div>                      
-                    </div>    
+                    <hr />
+                    <div class="row">
+                        <div class="col-sm-6"> <img class="img-responsive image-p border "
+                                src="./assets/images/Weather-Dashboard.gif" alt="Portfolio Image"></div>
+                        <div class="col-sm-6"> <img class="img-responsive image-p border "
+                                src="./assets/images/Coding-Quiz.gif" alt="Portfolio Image"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6"> <img class="img-responsive image-p border "
+                                src="./assets/images/work-scheduler.png" alt="Portfolio Image"></div>
+                        <!-- <div class="col-sm-6"> <img class="img-responsive image-p" src="./assets/images/pic-4.jpg" alt="Portfolio Image"></div> -->
+                    </div>
+                    <div class="row">
+                        <!-- <div class="col-sm-6"> <img class="img-responsive image-p" src="./assets/images/pic-5.jpg" alt="Portfolio Image"></div>                       -->
+                    </div>
                 </div>
             </div>
         </div>
