added link to git hub repo and deployed website

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,20 +61,53 @@
                 <div class="col-lg-9 portfolio-col">
                     <h1 id="portfolio-header">Portfolio</h1>
                     <hr />
-                    <div class="row">
-                        <div class="col-sm-6"> <img class="img-responsive image-p border "
-                                src="./assets/images/Weather-Dashboard.gif" alt="Portfolio Image"></div>
-                        <div class="col-sm-6"> <img class="img-responsive image-p border "
-                                src="./assets/images/Coding-Quiz.gif" alt="Portfolio Image"></div>
+                    <div class="row portfolio-row">
+                        <div class="col-sm-12">
+                            <div class="card-deck">
+                                <div class="card" style="max-width: 350px;">
+                                    <img class="img-responsive image-p border "
+                                        src="./assets/images/Weather-Dashboard.gif" alt="Portfolio Image">
+                                    <div class="card-body">
+                                        <p class="card-title">Weather Dashboard</p>      
+                                        <div class="row">
+                                            <div class="col-sm-6"><a href="https://github.com/NavdeepDP/Weather-Dashboard" target="_blank" >Git Hub Repo Link</a></div>
+                                            <div class="col-sm-6"><a href="https://navdeepdp.github.io/Weather-Dashboard/" target="_blank" >Deployed website</a></div>
+                                        </div>                                                                                                              
+                                    </div>
+                                </div>
+                                <div class="card" style="max-width: 350px;">
+                                    <img class="img-responsive image-p border " src="./assets/images/Coding-Quiz.gif"
+                                        alt="Portfolio Image">
+                                    <div class="card-body">
+                                        <p class="card-title">Coding Quiz</p>
+                                        <div class="row">
+                                            <div class="col-sm-6"><a href="https://github.com/NavdeepDP/Code-Quiz" target="_blank" >Git Hub Repo Link</a></div>
+                                            <div class="col-sm-6"><a href="https://navdeepdp.github.io/Code-Quiz/" target="_blank" >Deployed website</a></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-6"> <img class="img-responsive image-p border "
-                                src="./assets/images/work-scheduler.png" alt="Portfolio Image"></div>
-                        <!-- <div class="col-sm-6"> <img class="img-responsive image-p" src="./assets/images/pic-4.jpg" alt="Portfolio Image"></div> -->
+                    <div class="row portfolio-row">
+                        <div class="col-sm-6">
+                            <div class="card-deck">
+                            <div class="card" style="max-width: 350px;">
+                                <img class="img-responsive image-p border "
+                                src="./assets/images/work-scheduler.png" alt="Portfolio Image">
+                                <div class="card-body">                                    
+                                    <p class="card-text">Work Day Scheduler</p>
+                                    <div class="row">
+                                        <div class="col-sm-6"><a href="https://github.com/NavdeepDP/Work-Day-Scheduler" target="_blank" >Git Hub Repo Link</a></div>
+                                        <div class="col-sm-6"><a href="https://navdeepdp.github.io/Work-Day-Scheduler/" target="_blank" >Deployed website</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+                        
                     </div>
-                    <div class="row">
-                        <!-- <div class="col-sm-6"> <img class="img-responsive image-p" src="./assets/images/pic-5.jpg" alt="Portfolio Image"></div>                       -->
-                    </div>
+
                 </div>
             </div>
         </div>
