added resumme, modified display styling

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,11 +32,14 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a href="https://www.linkedin.com/in/navdeep-puri" target="_blank" class="fa fa-linkedin"></a>
+                    <li class="nav-item" >
+                        <a class="nav-link" href="./assets/images/Navdeep_Resume.pdf" target="_blank" id="link">Resume</a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://github.com/NavdeepDP" target="_blank" class="fa fa-github fa-5x"></a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/navdeep-puri" target="_blank" id="link">LinkedIn</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/NavdeepDP" target="_blank" id="link">GitHub</a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link" href="./contact.html">Contact</a>
