Added project-1 links and picture

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,11 +32,13 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item" >
-                        <a class="nav-link" href="./assets/images/Navdeep_Resume.pdf" target="_blank" id="link">Resume</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./assets/images/Navdeep_Resume.pdf" target="_blank"
+                            id="link">Resume</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.linkedin.com/in/navdeep-puri" target="_blank" id="link">LinkedIn</a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/navdeep-puri" target="_blank"
+                            id="link">LinkedIn</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/NavdeepDP" target="_blank" id="link">GitHub</a>
@@ -71,11 +73,15 @@
                                     <img class="img-responsive image-p border "
                                         src="./assets/images/Weather-Dashboard.gif" alt="Portfolio Image">
                                     <div class="card-body">
-                                        <p class="card-title">Weather Dashboard</p>      
+                                        <p class="card-title">Weather Dashboard</p>
                                         <div class="row">
-                                            <div class="col-sm-6"><a href="https://github.com/NavdeepDP/Weather-Dashboard" target="_blank" >Git Hub Repo Link</a></div>
-                                            <div class="col-sm-6"><a href="https://navdeepdp.github.io/Weather-Dashboard/" target="_blank" >Deployed website</a></div>
-                                        </div>                                                                                                              
+                                            <div class="col-sm-6"><a
+                                                    href="https://github.com/NavdeepDP/Weather-Dashboard"
+                                                    target="_blank">Git Hub Repo Link</a></div>
+                                            <div class="col-sm-6"><a
+                                                    href="https://navdeepdp.github.io/Weather-Dashboard/"
+                                                    target="_blank">Deployed website</a></div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="card" style="max-width: 350px;">
@@ -84,8 +90,10 @@
                                     <div class="card-body">
                                         <p class="card-title">Coding Quiz</p>
                                         <div class="row">
-                                            <div class="col-sm-6"><a href="https://github.com/NavdeepDP/Code-Quiz" target="_blank" >Git Hub Repo Link</a></div>
-                                            <div class="col-sm-6"><a href="https://navdeepdp.github.io/Code-Quiz/" target="_blank" >Deployed website</a></div>
+                                            <div class="col-sm-6"><a href="https://github.com/NavdeepDP/Code-Quiz"
+                                                    target="_blank">Git Hub Repo Link</a></div>
+                                            <div class="col-sm-6"><a href="https://navdeepdp.github.io/Code-Quiz/"
+                                                    target="_blank">Deployed website</a></div>
                                         </div>
                                     </div>
                                 </div>
@@ -93,22 +101,43 @@
                         </div>
                     </div>
                     <div class="row portfolio-row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-12">
                             <div class="card-deck">
-                            <div class="card" style="max-width: 350px;">
-                                <img class="img-responsive image-p border "
-                                src="./assets/images/work-scheduler.png" alt="Portfolio Image">
-                                <div class="card-body">                                    
-                                    <p class="card-text">Work Day Scheduler</p>
-                                    <div class="row">
-                                        <div class="col-sm-6"><a href="https://github.com/NavdeepDP/Work-Day-Scheduler" target="_blank" >Git Hub Repo Link</a></div>
-                                        <div class="col-sm-6"><a href="https://navdeepdp.github.io/Work-Day-Scheduler/" target="_blank" >Deployed website</a></div>
+                                <div class="card" style="max-width: 350px;">
+                                    <img class="img-responsive image-p border " src="./assets/images/work-scheduler.png"
+                                        alt="Portfolio Image">
+                                    <div class="card-body">
+                                        <p class="card-text">Work Day Scheduler</p>
+                                        <div class="row">
+                                            <div class="col-sm-6"><a
+                                                    href="https://github.com/NavdeepDP/Work-Day-Scheduler"
+                                                    target="_blank">Git Hub Repo Link</a></div>
+                                            <div class="col-sm-6"><a
+                                                    href="https://navdeepdp.github.io/Work-Day-Scheduler/"
+                                                    target="_blank">Deployed website</a></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card" style="max-width: 350px;">
+                                    <img class="img-responsive image-p border "
+                                        src="./assets/images/FindYourAdventure1.png" alt="Portfolio Image">
+                                    <div class="card-body">
+                                        <p class="card-text">Work Day Scheduler</p>
+                                        <div class="row">
+                                            <div class="col-sm-6"><a
+                                                    href="https://github.com/NavdeepDP/Find-Your-Adventure"
+                                                    target="_blank">Git Hub Repo Link</a></div>
+                                            <div class="col-sm-6"><a
+                                                    href="https://navdeepdp.github.io/Find-Your-Adventure/"
+                                                    target="_blank">Deployed website</a></div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+
                         </div>
-                        </div>
-                        
+
+
                     </div>
 
                 </div>
