add engineering team generator in  Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -136,8 +136,33 @@
                             </div>
 
                         </div>
+                    </div>
 
+                    <div class="row portfolio-row">
+                        <div class="col-sm-12">
+                            <div class="card-deck">
+                                <div class="card" style="max-width: 350px;">
+                                    <img class="img-responsive image-p border " src="./assets/images/team.png"
+                                        alt="Portfolio Image">
+                                    <div class="card-body">
+                                        <p class="card-text">Team Generator</p>
+                                        <div class="row">
+                                            <div class="col-sm-6"><a
+                                                    href="https://github.com/NavdeepDP/Engineering-Team-Generator"
+                                                    target="_blank">Git Hub Repo Link</a></div>
+                                            <!-- <div class="col-sm-6"><a
+                                                    href="https://navdeepdp.github.io/Work-Day-Scheduler/"
+                                                    target="_blank">Deployed website</a></div> -->
+                                        </div>
+                                    </div>
+                                </div>
 
+                                <div class="card" style="max-width: 350px;">
+                                    
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
 
                 </div>
