added burger app to the portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -158,7 +158,19 @@
                                 </div>
 
                                 <div class="card" style="max-width: 350px;">
-                                    
+                                    <img class="img-responsive image-p border " src="./assets/images/burger-app.gif"
+                                        alt="Portfolio Image">
+                                    <div class="card-body">
+                                        <p class="card-text">Team Generator</p>
+                                        <div class="row">
+                                            <div class="col-sm-6"><a
+                                                    href="https://github.com/NavdeepDP/Burger"
+                                                    target="_blank">Git Hub Repo Link</a></div>
+                                            <div class="col-sm-6"><a
+                                                href="https://eat-daa-burger-app.herokuapp.com/"
+                                                target="_blank">Deployed website</a></div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
