added links to project-2

--- a/portfolio.html
+++ b/portfolio.html
@@ -161,7 +161,7 @@
                                     <img class="img-responsive image-p border " src="./assets/images/burger-app.gif"
                                         alt="Portfolio Image">
                                     <div class="card-body">
-                                        <p class="card-text">Team Generator</p>
+                                        <p class="card-text">Burger App</p>
                                         <div class="row">
                                             <div class="col-sm-6"><a
                                                     href="https://github.com/NavdeepDP/Burger"
@@ -171,6 +171,32 @@
                                                 target="_blank">Deployed website</a></div>
                                         </div>
                                     </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="row portfolio-row">
+                        <div class="col-sm-12">
+                            <div class="card-deck">
+                                <div class="card" style="max-width: 350px;">
+                                    <img class="img-responsive image-p border " src="./assets//images//straightSets.png"
+                                        alt="Portfolio Image">
+                                    <div class="card-body">
+                                        <p class="card-text">Straight Sets</p>
+                                        <div class="row">
+                                            <div class="col-sm-6"><a
+                                                    href="https://github.com/NavdeepDP/Straight-Sets"
+                                                    target="_blank">Git Hub Repo Link</a></div>
+                                            <div class="col-sm-6"><a
+                                                    href="https://straight-sets.herokuapp.com/"
+                                                    target="_blank">Deployed website</a></div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="card" style="max-width: 350px;">
+
                                 </div>
                             </div>
 
